--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_markdown: ^0.7.6
   http: ^1.2.2
+  image_picker: ^0.8.9
+  path_provider: ^2.1.5
   provider: ^6.1.2
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
