--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  file_picker: ^8.1.7
   flutter_markdown: ^0.7.6
   http: ^1.2.2
+  markdown: ^7.0.0
   image_picker: ^0.8.9
   path_provider: ^2.1.5
   provider: ^6.1.2
+  share_plus: ^10.1.4
   url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
